--- a/software/device/webapp/package.json
+++ b/software/device/webapp/package.json
@@ -14,12 +14,14 @@
     "build/*"
   ],
   "dependencies": {
+    "chart.js": "^4.3.0",
     "dotenv-safe": "^8.2.0",
     "notyf": "^3.9.0",
     "preact": "^10.3.1",
     "preact-jsx-chai": "^3.0.0",
     "preact-markup": "^2.0.0",
     "preact-render-to-string": "^5.1.4",
+    "react-chartjs-2": "^5.2.0",
     "react-hook-form": "^6.0.4",
     "react-icons": "^3.10.0",
     "reactjs-popup": "^1.5.0",
