--- a/software/device/webapp/package.json
+++ b/software/device/webapp/package.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "chart.js": "^4.3.0",
+    "csv-parser": "^3.0.0",
     "dotenv-safe": "^8.2.0",
     "notyf": "^3.9.0",
     "preact": "^10.3.1",
