--- a/software/device/webapp/tsconfig.json
+++ b/software/device/webapp/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         /* Basic Options */
+        "skipLibCheck": true,
         "target": "ES5",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */
         "module": "ESNext",                       /* Specify module code generation: 'none', commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
         // "lib": [],                             /* Specify library files to be included in the compilation:  */
