--- a/software/device/webapp/package.json
+++ b/software/device/webapp/package.json
@@ -26,7 +26,7 @@
     "react-icons": "^3.10.0",
     "reactjs-popup": "^1.5.0",
     "source-map-explorer": "^2.4.2",
-    "webpack": "^4.28.4"
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.5",
@@ -45,10 +45,10 @@
     "jest": "^24.9.0",
     "jest-preset-preact": "^1.0.0",
     "lint-staged": "^10.0.7",
-    "preact-cli": "^3.0.0-next.19",
+    "preact-cli": "^3.0.0",
     "prettier": "^1.19.1",
     "sirv-cli": "^1.0.0-next.3",
-    "typescript": "^3.7.5",
+    "typescript": "^5.0.4",
     "typings-for-css-modules-loader": "^1.7.0"
   }
 }
