--- a/software/device/webapp/package.json
+++ b/software/device/webapp/package.json
@@ -47,7 +47,7 @@
     "lint-staged": "^13.2.2",
     "preact-cli": "^3.0.0",
     "prettier": "^2.8.8",
-    "sirv-cli": "^1.0.0-next.3",
+    "sirv-cli": "^2.0.2",
     "typescript": "^5.1.3",
     "typings-for-css-modules-loader": "^1.7.0"
   }
